# customhys

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HyGpt-cml.ipynb  HyGpt-custom.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  __clips.py  __init__.py  benchmark_func.py  cUIstomhys  characterisation.py  customhys-qt.ui  dascop.py  encode_operators.ipynb  encode_operators.py  experiment.py  experiments.py  heuristic_configurations.py  hybertheuristic.ipynb  hyperheuristic.py  libcrypto.1.1.dylib  libintl.8.dylib  liblzma.5.dylib  libpython3.8.dylib  libssl.1.1.dylib  machine_learning.py  metaheuristic.py  metaheuristics.py  mhs_experiments.ipynb  nerual_network.py  neural_network.py  operators.py  operators_collection.txt  operatos.py  (+30 more)
.github/workflows/: ci.yml
.pylint.d/: dascop.metaheuristic1.stats  dascop.operators1.stats  dascop.population1.stats
Old/: .gitignore  benchmark_func.py  hyperheuristic.py  neural_network.py  stn.py  testing_transformers_custom.py  testing_transformers_destiled.py  testing_transformers_tensorflow.py  tools.py
Old/exconf/: basic_metaheuristic.json  basic_metaheuristic_experiment.json  default_nn_lstm_relu_60.json  default_nn_lstm_sigmoid60_60.json  default_nn_lstm_sigmoid_2hiddenLSTM_60.json  default_nn_lstm_sigmoid_2hidden_60.json  default_nn_lstm_sigmoid_3hidden_60.json  default_nn_lstm_sigmoid_3hidden_sandwich_60.json  default_nn_lstm_tanh_2hidden_60.json  default_nn_mlp_30pop_deep_performance_learning.json  default_nn_mlp_30pop_small_performance_learning.json  default_nn_mlp_30pop_verysmall_40.json  default_nn_mlp_30pop_verysmall_70.json  default_nn_mlp_demo.json  default_transformer_bert.json  demo.conf  demo.json  (+19 more)
backup_old_trash/: __clips.py  dascop.py  heuristic_configurations.py  population_old.py  problem.py  sandbox_v2.py  sandbox_v3.py
collections/: basicmetaheuristics.txt  medium_collection.txt  operators_collection.txt  operators_weights.json  tow_mhs_collection.txt
customhys/: __init__.py  benchmark_func.py  characterisation.py  experiment.py  hyperheuristic.py  machine_learning.py  metaheuristic.py  neural_network.py  operators.py  population.py  test_solvers.py  tests.py  tools.py  visualisation.py
customhys.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data_files/: translearn_dataset
docs/: Makefile  _config.yml  changelog.md  conf.py  getting_started.md  index.md  index.rst  installation.md  references.md  requirements.txt
examples/: Tutorial_English.ipynb  Tutorial_Spanish.ipynb  quickTest.ipynb  tutorial_in_spanish.ipynb
exconf/: basic_metaheuristic.json  default_nn_best_double_lstm.json  default_nn_best_double_lstm_CEC.json  default_nn_lstm_30pop_performance_learning.json  default_nn_lstm_cut_pad_10.json  default_nn_lstm_cut_pad_100.json  default_nn_lstm_cut_pad_80.json  default_nn_lstm_demo.json  default_nn_lstm_double_sig.json  default_nn_lstm_mem_60_10.json  default_nn_lstm_mem_60_20.json  default_nn_lstm_mem_60_30.json  default_nn_lstm_mem_60_40.json  default_nn_lstm_mem_60_50.json  default_nn_lstm_padded_30pop_performance_learning.json  default_nn_lstm_padded_cut_30pop_performance_learning.json  default_nn_lstm_relu_2hidden_60.json  default_nn_lstm_sigmoid10_60.json  default_nn_lstm_sigmoid30_60.json  default_nn_lstm_sigmoid40_60.json  default_nn_lstm_sigmoid50_60.json  default_nn_lstm_sigmoid_3hidden2_60.json  default_nn_lstm_sigmoid_3hidden_sandwich2_60.json  default_nn_lstm_sigmoid_60_random.json  default_nn_lstm_sigmoid_60_random_double.json  default_nn_lstm_tanh_2hiddenLSTM_60.json  default_nn_lstm_tanh_2hidden_60.json  default_nn_lstm_tanh_3hidden_60.json  default_nn_lstm_tanh_3hidden_sandwich2_60.json  default_nn_lstm_tanh_60.json  default_nn_lstm_tanh_60_random.json  default_nn_lstm_unlimited_60.json  default_nn_mlp_30pop_big_performance_learning.json  default_nn_mlp_30pop_performance_learning.json  default_nn_mlp_30pop_verysmall_10.json  default_nn_mlp_30pop_verysmall_100.json  default_nn_mlp_30pop_verysmall_20.json  default_nn_mlp_30pop_verysmall_30.json  default_nn_mlp_30pop_verysmall_50.json  default_nn_mlp_30pop_verysmall_60.json  (+82 more)
tests/: run_all_tests.py  test_benchmark_func.py  test_hyperheuristic.py  test_hyperheuristic_initialization.py  test_initialization_operators.py  test_makefile.py  test_metaheuristic.py  test_operators.py  test_population_initialization.py  test_population_update_positions.py  test_setup.py  test_solvers.py  test_tools.py
(+63 files in other folders)
