[project]
name = "customhys"
version = "2.0.0-alpha"
description = "This framework provides tools for solving, but not limited to, continuous optimisation problems using a hyper-heuristic approach for customising metaheuristics."
keywords = ["metaheuristics", "hyper-heuristic", "optimization", "automatic design", "global optimization", "evolutionary computation", "bio-inspired", "algorithm design"]
readme = "README.md"
authors = [
    {name = "Jorge Mario Cruz-Duarte", email = "jorge.cruz-duarte@univ-lille.fr"},
]
maintainers = [
    {name = "Jorge Mario Cruz-Duarte", email = "jorge.cruz-duarte@univ-lille.fr"},
]
requires-python = ">=3.10"
# Core dependencies - only what's needed to run the package
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.13.1",
    "matplotlib>=3.9.2",
    "fonttools>=4.54.0",  # Fix CVE-2025-66034
    "pandas>=2.2.0",
    "tqdm>=4.66.3",
    "optproblems>=1.3",
    "scikit-learn>=1.5.0",
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcrvz/customhys"
Repository = "https://github.com/jcrvz/customhys"
Documentation = "https://customhys.readthedocs.io/"
"Bug Tracker" = "https://github.com/jcrvz/customhys/issues"

[project.optional-dependencies]
# Machine Learning support
ml = [
    "tensorflow>=2.16.0; sys_platform != 'darwin'",
    "tensorflow-macos>=2.16.0; sys_platform == 'darwin'",
    "tensorflow-metal>=1.1.0; sys_platform == 'darwin'",
]
# Development dependencies
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
# Examples and notebooks
examples = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.2.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.2.0",
]
# Documentation
docs = [
    "sphinx>=7.4.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
]
# All optional dependencies
all = [
    "customhys[ml,dev,examples,docs]",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["customhys"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
